--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -14,6 +14,10 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: #FFF7ED;
+}
+
 .container {
     width: 100%;
     max-width: 1366px;
