--- a/src/components/Vancard/style.scss
+++ b/src/components/Vancard/style.scss
@@ -2,6 +2,10 @@
     width: 100%;
     max-width: 230px;
 
+    a {
+        text-decoration: none;
+    }
+
     .wrapper-image {
         width: 100%;
         height: 230px;
