--- a/src/pages/Vans/style.scss
+++ b/src/pages/Vans/style.scss
@@ -4,12 +4,56 @@
     min-height: 100vh;
     
     h1 {
-        margin-bottom: 30px;
+        margin-bottom: 20px;
         font-size: 24px;
         font-weight: 700;
         color: #161616;
         @media only screen and (min-width: 1200px) {
             font-size: 32px;
+        }
+    }
+
+    .wrapper-filters {
+        display: flex;
+        margin-bottom: 30px;
+        align-items: center;
+        gap: 20px;
+
+        button {
+            padding: 8px 26px;
+            font-size: 16px;
+            color: #4D4D4D;
+            border-radius: 5px;
+            background-color: #FFEAD0;
+            border: none;
+            cursor: pointer;
+
+            &.selected {
+                color: #fff;
+            }
+
+            &.simple.selected {
+                background-color: #E17654;
+            }
+
+            &.rugged.selected {
+                background-color: #115E59;
+            }
+
+            &.luxury.selected {
+                background-color: #161616;
+            }
+
+            &.clear-filter {
+                padding: 0 0 2px 0;
+                margin: 0 0 0 auto;
+                background-color: transparent;
+                border-radius: 0;
+                border-bottom: 1px solid;
+                border-top: 0;
+                border-left: 0;
+                border-right: 0;
+            }
         }
     }
 
