feature: firebase integration + rework van fetch requests

--- a/src/pages/Host/style.scss
+++ b/src/pages/Host/style.scss
@@ -87,6 +87,14 @@
                     &.simple {
                         background-color: #E17654;
                     }
+
+                    &.rugged {
+                        background-color: #115E59;
+                    }
+
+                    &.luxury {
+                        background-color: #161616;
+                    }
                 }
 
                 .name {
